<resources>
    <string name="app_name">EMS-Android-App</string>
    <string name="landingPageSubtitle">Εθνικό Κέντρο Άμεσης Βοήθειας</string>
    <string name="landingPageTitle">E.K.A.B.</string>
    <string name="loginButtonString">Σύνδεση μέσω</string>
    <string name="loginButtonText">Σύνδεση μέσω Taxisnet</string>
    <string name="thankText">Ευχαριστούμε!</string>
    <string name="ambulanceOnWay">Το ασθενοφόρο\nείναι καθοδόν.</string>
    <string name="ambulance_icon_description">Ambulance Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="horizontal_line">horizontal_line</string>
    <string name="string_horizontal_line">horizontal line</string>
    <string name="onDuty_text">Εφημερεύοντα Νοσοκομεία</string>
    <string name="onDuty_sub">σε</string>
    <string name="cityNamePlaceholder">X</string>
    <string name="hospitalName0">ΠΑΝΕΠΙΣΤΗΜΙΑΚΟ ΓΕΝΙΚΟ ΝΟΣΟΚΟΜΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ - ΑΧΕΠΑ</string>
    <string name="hospitalClinics0">Αγγειοχειρουργική, Αιμοδυναμική, Γναθοχειρουργική, Θωρακοχειρουργική, Καρδιολογική, Καρδιοχειρουργική, Νευρολογική, Νευροχειρουργική, Ορθοπαιδική, Παθολογική, Παιδοψυχιατρική, Πλαστική Χειρουργική, Πνευμονολογική, Χειρουργική, Ψυχιατρική, ΩΡΛ</string>
    <string name="emergency_button_desc">emergency</string>
    <string name="map_navigation_description">map navigation</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="speak">Speak</string>
    <string name="back">back</string>
    <string name="_2">2</string>
    <string name="_6_9">6 - 9</string>
    <string name="_3">3</string>
    <string name="_1_3">1 - 3</string>
    <string name="_1">1</string>
    <string name="_3_5">3 - 5</string>
    <string name="pregnant_month">Μήνας εγκυμοσύνης</string>
    <string name="upper_right_logo">upper-right-logo</string>
    <string name="upper_left_logo">upper-left-logo</string>
    <string name="connection">Σύνδεση</string>
    <string name="code">Κωδικός</string>
    <string name="user">Χρήστης</string>
    <string name="taxisnet">Παρακαλώ εισάγεται τους κωδικούς σας στο Taxisnet για να συνδεθείτε.</string>
    <string name="auth">Αυθεντικοποίηση Χρήστη</string>
    <string name="people_injured">Πόσα είναι τα θύματα;</string>
    <string name="one">Ένα</string>
    <string name="_4">4</string>
    <string name="two">Δύο</string>
    <string name="more">Περισσότερα</string>
    <string name="three">Τρία</string>
    <string name="consciousness">Έχουν/ει αισθήσεις;</string>
    <string name="No">Όχι</string>
    <string name="Yes">Ναι</string>
    <string name="breath">Αναπνέουν/ει</string>
    <string name="another">Άλλο</string>
    <string name="car_accident">Τροχαίο</string>
    <string name="human_accident">Ακροτηριασμός</string>
    <string name="pregnancy">Εγκυμοσύνη</string>
    <string name="_5">5</string>
    <string name="confirm">confirm</string>
    <string name="what_happend">Τι έχει συμβεί;</string>
    <string name="fall">Πτώση</string>
</resources>