<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyQuestions">

    <ImageView
        android:id="@+id/topLineQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:contentDescription="@string/string_horizontal_line"
        android:src="@drawable/horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bottomLineQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:contentDescription="@string/string_horizontal_line"
        android:src="@drawable/horizontal_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/round_corners_questions"
        android:fontFamily="@font/roboto_bold"
        android:padding="20dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/what_happend"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLineQuestions" />

    <TextView
        android:id="@+id/q2a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey"
        android:fontFamily="@font/roboto_bold"
        android:padding="5dp"
        android:text="@string/fall"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/q3a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toEndOf="@+id/answer_2"
        app:layout_constraintTop_toBottomOf="@+id/q1a1" />

    <TextView
        android:id="@+id/q5a5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        android:fontFamily="@font/roboto_bold"
        android:padding="5dp"
        android:text="@string/another"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/answer_5"
        app:layout_constraintTop_toBottomOf="@+id/q4a4" />

    <Button
        android:id="@+id/answer_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_button_blue"
        android:backgroundTint="@color/blue"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/answer_2"
        app:layout_constraintEnd_toStartOf="@+id/q1a1"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/q1a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="152dp"
        android:background="@color/grey"
        android:fontFamily="@font/roboto_bold"
        android:padding="5dp"
        android:text="@string/car_accident"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <Button
        android:id="@+id/answer_4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_button_blue"
        android:backgroundTint="@color/blue"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/answer_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_3" />

    <TextView
        android:id="@+id/q4a4"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey"
        android:fontFamily="@font/roboto_bold"
        android:padding="5dp"
        android:text="@string/human_accident"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/q5a5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toEndOf="@+id/answer_4"
        app:layout_constraintTop_toBottomOf="@+id/q3a3" />

    <Button
        android:id="@+id/answer_3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_button_blue"
        android:backgroundTint="@color/blue"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/answer_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_2" />

    <TextView
        android:id="@+id/q3a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey"
        android:fontFamily="@font/roboto_bold"
        android:padding="5dp"
        android:text="@string/pregnancy"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/q4a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toEndOf="@+id/answer_3"
        app:layout_constraintTop_toBottomOf="@+id/q2a2" />

    <Button
        android:id="@+id/answer_2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_button_blue"
        android:backgroundTint="@color/blue"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/answer_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_1" />

    <Button
        android:id="@+id/answer_5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_button_blue"
        android:backgroundTint="@color/blue"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/another_situation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_4" />

    <EditText
        android:id="@+id/another_situation"
        android:layout_width="209dp"
        android:layout_height="91dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/rounded_textarea"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bottomLineQuestions"
        app:layout_constraintEnd_toStartOf="@+id/confirm_situation"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/confirm_situation"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/circle_button_blue"
        android:src="@drawable/ic_baseline_check_24"
        android:contentDescription="@string/confirm"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/audio_answer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/circle_button_blue"
        android:src="@drawable/ic_baseline_mic_24"
        android:contentDescription="@string/speak"
        app:layout_constraintBottom_toTopOf="@+id/bottomLineQuestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/another_situation"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/circle_button_grey"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/bottomLineQuestions"
        app:layout_constraintEnd_toStartOf="@+id/audio_answer"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/another_situation"
        app:layout_constraintVertical_bias="0.187" />

</androidx.constraintlayout.widget.ConstraintLayout>