<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingPageContent">

    <ImageView
        android:id="@+id/topLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:src="@drawable/horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/string_horizontal_line" />

    <ImageView
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:src="@drawable/horizontal_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/horizontal_line" />

    <TextView
        android:id="@+id/onDuty_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/onDuty_text"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLine" />

    <TextView
        android:id="@+id/onDuty_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/onDuty_sub"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onDuty_tag" />

    <TextView
        android:id="@+id/onDutyCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cityNamePlaceholder"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/onDuty_sub"
        app:layout_constraintTop_toBottomOf="@+id/onDuty_tag" />

    <ImageButton
        android:id="@+id/emergencyButton"
        android:layout_width="61dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/emergency_button_desc"
        android:src="@drawable/ambulance_white"
        app:layout_constraintBottom_toTopOf="@+id/bottomLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/emergencyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onDutyCity" />

</androidx.constraintlayout.widget.ConstraintLayout>