<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HospitalList">

    <TextView
        android:id="@+id/hospitalClinics0"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_blue"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/hospitalClinics0"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hospital0"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/light_blue"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/hospitalName0"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/hospitalClinics0"
        app:layout_constraintEnd_toEndOf="@+id/hospitalClinics0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hospitalClinics0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="19dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/map_icon"
        app:layout_constraintBottom_toBottomOf="@+id/hospital0"
        app:layout_constraintEnd_toEndOf="@+id/hospitalClinics0"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hospital0"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/map_navigation_description" />

</androidx.constraintlayout.widget.ConstraintLayout>