<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_landing_page_button"
    android:tag="LandingPageButtonTAG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".LandingPageButton">

    <TextView
        android:id="@+id/landingPageTitle"
        android:layout_width="154dp"
        android:layout_height="53dp"
        android:autoSizeTextType="none"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/landingPageTitle"
        android:textAlignment="center"
        android:textColor="#0D0CB5"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/landinnPageSubtitle"
        android:layout_width="317dp"
        android:layout_height="29dp"
        android:fontFamily="@font/roboto"
        android:text="@string/landingPageSubtitle"
        android:textColor="#0D0CB5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingPageTitle" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_login"
        android:contentDescription="@string/loginButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landinnPageSubtitle"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/login_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>